metadata/force-app/main/default/objects/CustomName_kBIyb__c/CustomName_kBIyb__c.object-meta.xml
<CustomObject>
    <description>Description_uworV</description>
    <label>CustomLabel_RRltY</label>
    <nameField>
        <label>CustomLabel_RRltY</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_RRltYs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>