metadata/force-app/main/default/objects/CustomName_kBIyb__c/fields/CustomField_TKudz__c.field-meta.xml
<CustomField>
    <fullName>CustomField_TKudz__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldjfhxz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>