metadata/force-app/main/default/objects/CustomName_kBIyb__c/fields/CustomField_YcJQp__c.field-meta.xml
<CustomField>
    <fullName>CustomField_YcJQp__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldPQbGg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>